--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "@types/redux": "^3.6.0",
+    "axios": "^1.2.0",
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
