--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,9 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.17",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/redux": "^3.6.0",
     "axios": "^1.2.0",
@@ -22,8 +25,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.6"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
@@ -32,7 +34,6 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-mock-store": "^1.0.3",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
