--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,29 +3,35 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "cross-env NODE_ENV=development node --loader ts-node/esm server.ts",
+    "build": "yarn build:client && yarn build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "tsc --p ./tsconfig.server.json && vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "test": "jest ./"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@emotion/server": "11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.17",
     "@reduxjs/toolkit": "^1.9.1",
-    "@types/redux": "^3.6.0",
     "axios": "^1.2.0",
     "dotenv": "^16.0.2",
+    "history": "5.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "express": "4.18.2",
     "formik": "^2.2.9",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
-    "redux-thunk": "^2.4.2"
+    "redux-first-history": "5.1.1",
+    "redux-thunk": "^2.4.2",
+    "serialize-javascript": "6.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
@@ -33,10 +39,13 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.3",
+    "@types/serialize-javascript": "5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "cross-env": "7.0.3",
     "eslint": "^8.23.0",
     "jest": "^28",
     "jest-environment-jsdom": "^29.0.1",
@@ -44,6 +53,7 @@
     "prettier": "^2.7.1",
     "redux-mock-store": "^1.5.4",
     "ts-jest": "^28.0.8",
+    "ts-node": "10.9.1",
     "typescript": "^4.8.2",
     "vite": "^3.0.7"
   },
