--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,7 +18,10 @@
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "reflect-metadata": "0.1.13",
+    "sequelize": "6.28.0",
+    "sequelize-typescript": "2.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -32,6 +35,7 @@
     "jest": "^28",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "sequelize-cli": "6.5.2",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
