--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^8.5.0",
     "express": "4.18.2",
     "formik": "^2.2.9",
+    "lodash": "4.17.21",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,11 +32,15 @@
     "react-router-dom": "^6.4.5",
     "redux-first-history": "5.1.1",
     "redux-thunk": "^2.4.2",
-    "serialize-javascript": "6.0.0"
+    "serialize-javascript": "6.0.0",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.8",
+    "@types/lodash": "4.14.191",
+    "@types/uuid": "9.0.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
@@ -47,8 +52,10 @@
     "@vitejs/plugin-react": "^2.0.1",
     "cross-env": "7.0.3",
     "eslint": "^8.23.0",
-    "jest": "^28",
+    "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.0.1",
+    "jest-fetch-mock": "^3.0.3",
+    "identity-obj-proxy": "3.0.0",
     "lefthook": "^1.1.1",
     "prettier": "^2.7.1",
     "redux-mock-store": "^1.5.4",
