--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.114",
     "@mui/material": "^5.10.17",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.0",
@@ -32,7 +34,8 @@
     "react-router-dom": "^6.4.5",
     "redux-first-history": "5.1.1",
     "redux-thunk": "^2.4.2",
-    "serialize-javascript": "6.0.0"
+    "serialize-javascript": "6.0.0",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
