--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,5 +1,5 @@
 ARG NODE_VERSION=16
-ARG CLIENT_PORT=3001
+ARG CLIENT_PORT=3000
 
 FROM node:$NODE_VERSION-buster as base
 
@@ -13,14 +13,15 @@ RUN yarn install --frozen-lockfile
 COPY . .
 
 RUN yarn lerna bootstrap
-RUN rm -rf /app/packages/server/dist/ && yarn build --scope=client
+RUN rm -rf /app/packages/client/dist/ && yarn build --scope=client
 
-
-FROM nginx:latest as production
+FROM node:$NODE_VERSION-buster-slim as production
 WORKDIR /app
 
-COPY --from=builder /app/packages/client/dist/ /app/
-COPY --from=builder /app/packages/client/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /app/packages/client/dist/ /app/dist/
+COPY --from=builder /app/packages/client/package.json /app/package.json
+COPY --from=builder /app/packages/client/server.js /app/server.js
+RUN yarn install --production=true
 
 EXPOSE $CLIENT_PORT
-CMD [ "nginx", "-g", "daemon off;" ]
+CMD ["node", "./server.js"]
