--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,60 @@ version: "3.9"
 services:
     client:
         container_name: prakticum-client
-        image: prakticum-client
+        image: cr.yandex/crpl258oggd4r8d4v1dm/prakticum-client
+        platform: linux/amd64
         build:
             context: .
             dockerfile: Dockerfile.client
             args:
               CLIENT_PORT: ${CLIENT_PORT}
         restart: always
+        depends_on:
+          - server
+          - postgres
         ports:
-            - "${CLIENT_PORT}:80"
+            - "${CLIENT_PORT}:${CLIENT_PORT}"
         environment:
           - CLIENT_PORT=${CLIENT_PORT}
           - SERVER_PORT=${SERVER_PORT}
+          - NODE_ENV=production
     server:
         container_name: prakticum-server
-        image: prackicum-server
+        image: cr.yandex/crpl258oggd4r8d4v1dm/prakticum-server
+        platform: linux/amd64
         build:
             context: .
             dockerfile: Dockerfile.server
             args:
               SERVER_PORT: ${SERVER_PORT}
         restart: always
+        depends_on:
+          - postgres
         ports:
             - "${SERVER_PORT}:${SERVER_PORT}"
         environment:
           SERVER_PORT: ${SERVER_PORT}
+        env_file:
+          - ./.env
+
+    balancer:
+        container_name: balancer
+        image: cr.yandex/crpl258oggd4r8d4v1dm/balancer
+        platform: linux/amd64
+        build:
+          dockerfile: Dockerfile.balancer
+        restart: always
+        depends_on:
+          - server
+          - client
+          - postgres
+        ports:
+          - "80:80"
+          - "443:443"
 
     postgres:
-      image: postgres:14     
+      image: postgres:14
+#      platform: linux/amd64
       ports:
         - "${POSTGRES_PORT}:${POSTGRES_PORT}"
       environment:
@@ -39,4 +65,3 @@ services:
         POSTGRES_DB: ${POSTGRES_DB}
       volumes:
         - ./tmp/pgdata:/var/lib/postgresql/data
-
