--- a/packages/client/tsconfig.server.json
+++ b/packages/client/tsconfig.server.json
@@ -1,10 +1,12 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noEmit": false
   },
   "include": ["server.ts"]
 }
