--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -68,6 +68,7 @@
     "prettier": "^2.7.1",
     "redux-mock-store": "^1.5.4",
     "ts-jest": "^28.0.8",
+    "ts-jest-mock-import-meta": "1.0.0",
     "ts-node": "10.9.1",
     "typescript": "^4.8.2"
   },
