--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -3,6 +3,10 @@ events {
 
 http {
     include mime.types;
+    types {
+        # here are additional types
+        audio/wav wav;
+    }
     server {
       server_name localhost;
       ssi on;
@@ -11,7 +15,6 @@ http {
     }
     server {
         server_name localhost;
-        listen 80;
         listen [::]:443 ssl backlog=2048 ipv6only=off;
         access_log off;
 
@@ -62,6 +65,15 @@ http {
         }
 
         location /api-p {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_pass http://prakticum-server:3001;
+            proxy_redirect off;
+        }
+
+        location /api {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
