--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -64,7 +64,7 @@ http {
             proxy_redirect off;
         }
 
-        location /api-p {
+        location /api {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,7 +73,7 @@ http {
             proxy_redirect off;
         }
 
-        location /api {
+        location /p-api {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
