--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.2",
+    "helmet": "6.0.1",
     "history": "5.3.0",
     "eslint-config-prettier": "^8.5.0",
     "express": "4.18.2",
@@ -49,6 +50,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/cors": "2.8.12",
     "@types/jest": "^28.1.8",
+    "@types/helmet": "4.0.0",
     "@types/lodash": "4.14.191",
     "@types/uuid": "9.0.0",
     "@types/react": "^18.0.17",
