--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,8 @@ services:
         ports:
             - "${SERVER_PORT}:${SERVER_PORT}"
         environment:
-          SERVER_PORT: ${SERVER_PORT}
+          - SERVER_PORT=${SERVER_PORT}
+          - NODE_ENV=production
         env_file:
           - ./.env
 
@@ -56,7 +57,6 @@ services:
 
     postgres:
       image: postgres:14
-#      platform: linux/amd64
       ports:
         - "${POSTGRES_PORT}:${POSTGRES_PORT}"
       environment:
