--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "16.0.2",
     "eslint-config-prettier": "8.5.0",
     "express": "4.18.1",
+    "helmet": "6.0.1",
     "http-proxy-middleware": "2.0.6",
     "lodash": "4.17.21",
     "morgan": "1.10.0",
@@ -30,6 +31,7 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.8",
+    "@types/helmet": "4.0.0",
     "@types/lodash": "4.14.191",
     "@types/morgan": "1.9.4",
     "@types/pg": "8.6.5",
